--- a/web/ventas.xhtml
+++ b/web/ventas.xhtml
@@ -37,7 +37,7 @@
 
                         <f:facet name="header">
                             <div >
-                                Ventas Registrados
+                                Ventas Registradas
 
                                 <div style="float: right">
                                     <p:commandButton id="toggler" type="button" value="Columns" icon="pi pi-align-justify"/>
