--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -11,6 +11,16 @@
 
     </h:head>
     <h:body style="background-color: #f8f9fa;">
+        <div class="p-grid">
+    <div class="p-col"></div>
+    <div class="p-col"></div>
+    <div class="p-col"><p:graphicImage name="Softwash.png" style="max-width: 640px;" library="img"/></div>
+    <div class="p-col">
+    </div>
+    <div class="p-col">
+    </div>
+</div>
+    
         <ui:include src="barraMenu.xhtml"></ui:include>
         <br/>
         <div class="p-grid">
