--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
     <h:head>
-        <title>Facelet Title</title>
+        <title>SoftWash</title>
         <h:outputStylesheet name="css/primeflex.min.css" />
 
     </h:head>
