--- a/web/facturas.xhtml
+++ b/web/facturas.xhtml
@@ -42,7 +42,7 @@ and open the template in the editor.
         </div>
              <div class="p-col-7">
                
-                 <p:dataTable id="tabla1" var="facturas" value="#{facturasC.numero}" rowKey="#{facturas.numero}" selectionMode="single">
+                 <p:dataTable id="tabla1" var="facturas" value="#{facturasC.facturas}" rowKey="#{facturas.numero}" selectionMode="single">
 
 
 
