--- a/web/empleados.xhtml
+++ b/web/empleados.xhtml
@@ -30,7 +30,7 @@
            </div>
              <div class="p-col-7">
                
-                 <p:dataTable id="tabla1" var="empleados" value="#{empleadosC.documento}" rowKey="#{empleados.documento}" selectionMode="single">
+                 <p:dataTable id="tabla1" var="empleados" value="#{empleadosC.empleados}" rowKey="#{empleados.documento}" selectionMode="single">
 
 
 
