--- a/web/empleados.xhtml
+++ b/web/empleados.xhtml
@@ -8,6 +8,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>Facelet Title</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <h:outputStylesheet name="css/primeflex.min.css" />
     </h:head>
     <h:body>
         <ui:include src="barraMenu.xhtml"></ui:include>
