--- a/web/facturas.xhtml
+++ b/web/facturas.xhtml
@@ -15,6 +15,7 @@ and open the template in the editor.
     <h:head>
         <title>TODO supply a title</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <h:outputStylesheet name="css/primeflex.min.css" />
     </h:head>
     <h:body>
         <ui:include src="barraMenu.xhtml"></ui:include>
