--- a/web/empleados.xhtml
+++ b/web/empleados.xhtml
@@ -24,10 +24,10 @@
                 <p:outputLabel value="Contraseña" for="clave" ></p:outputLabel>
                 <p:inputText value="#{empleadosC.clave}" id="clave"></p:inputText>
                 
-                <p:commandButton value="Guardar" actionListener="#{empleadosC.insertar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Actualizar" actionListener="#{empleadosC.actualizar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Eliminar" actionListener="#{empleadosC.eliminar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Consultar" actionListener="#{empleadosC.consultaPrimaria()}" update="msg1,form1"></p:commandButton>
+                <p:commandButton value="Guardar" actionListener="#{empleadosC.insertar()}" icon = "pi pi-plus" update="msg1"></p:commandButton>
+                <p:commandButton value="Actualizar" actionListener="#{empleadosC.actualizar()}" styleClass="ui-button-raised ui-button-secondary" icon = "pi pi-upload" update="msg1"></p:commandButton>
+                <p:commandButton value="Eliminar" actionListener="#{empleadosC.eliminar()}" styleClass="ui-button-raised ui-button-danger" icon = "pi pi-trash" update="msg1"></p:commandButton>
+                <p:commandButton value="Consultar" actionListener="#{empleadosC.consultaPrimaria()}" styleClass="ui-button-raised ui-button-warning"  icon = "pi pi-search" update="msg1,form1"></p:commandButton>
             </p:panelGrid>
            </div>
              <div class="p-col-7">
