--- a/web/facturas.xhtml
+++ b/web/facturas.xhtml
@@ -35,10 +35,10 @@ and open the template in the editor.
                             <p:inputText value="#{facturasC.personasdocumento}"></p:inputText>
                             <p:outputLabel value="Documento empleado"></p:outputLabel>
                             <p:inputText value="#{facturasC.empleadodocumento}"></p:inputText>
-                            <p:commandButton value="Guardar" actionListener="#{facturasC.insertar()}" update="growlMsg"></p:commandButton>
-                            <p:commandButton value="Actualizar" actionListener="#{facturasC.actualizar()}" update="growlMsg"></p:commandButton>
-                            <p:commandButton value="Eliminar" actionListener="#{facturasC.eliminar()}" update="growlMsg"></p:commandButton>
-                            <p:commandButton value="Consultar" actionListener="#{facturasC.consultaPrimaria()}" update="growlMsg,form1"></p:commandButton>
+                            <p:commandButton value="Guardar" actionListener="#{facturasC.insertar()}" icon = "pi pi-plus" update="growlMsg"></p:commandButton>
+                            <p:commandButton value="Actualizar" actionListener="#{facturasC.actualizar()}" styleClass="ui-button-raised ui-button-secondary" icon = "pi pi-upload" update="growlMsg"></p:commandButton>
+                            <p:commandButton value="Eliminar" actionListener="#{facturasC.eliminar()}" styleClass="ui-button-raised ui-button-danger" icon = "pi pi-trash" update="growlMsg"></p:commandButton>
+                            <p:commandButton value="Consultar" actionListener="#{facturasC.consultaPrimaria()}" styleClass="ui-button-raised ui-button-warning"  icon = "pi pi-search" update="growlMsg,form1"></p:commandButton>
                         </p:panelGrid>
         </div>
              <div class="p-col-7">
