--- a/web/precios.xhtml
+++ b/web/precios.xhtml
@@ -30,10 +30,10 @@
                 <p:outputLabel value="Fecha Fin" for="fechaFin" ></p:outputLabel>
                 <p:datePicker  value="#{preciosC.fechaFin}" id="fechaFin" pattern="yyyy/MM/dd"></p:datePicker>
 
-                <p:commandButton value="Guardar" actionListener="#{preciosC.insertar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Actualizar" actionListener="#{preciosC.actualizar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Eliminar" actionListener="#{preciosC.eliminar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Consultar" actionListener="#{preciosC.consultaPrimaria()}" update="msg1,form1"></p:commandButton>
+                <p:commandButton value="Guardar" actionListener="#{preciosC.insertar()}" icon = "pi pi-plus" update="msg1"></p:commandButton>
+                <p:commandButton value="Actualizar" actionListener="#{preciosC.actualizar()}" styleClass="ui-button-raised ui-button-secondary" icon = "pi pi-upload" update="msg1"></p:commandButton>
+                <p:commandButton value="Eliminar" actionListener="#{preciosC.eliminar()}" styleClass="ui-button-raised ui-button-danger" icon = "pi pi-trash" update="msg1"></p:commandButton>
+                <p:commandButton value="Consultar" actionListener="#{preciosC.consultaPrimaria()}" styleClass="ui-button-raised ui-button-warning"  icon = "pi pi-search" update="msg1,form1"></p:commandButton>
             </p:panelGrid>
             </div>
              <div class="p-col-7">
