--- a/web/productos.xhtml
+++ b/web/productos.xhtml
@@ -26,10 +26,11 @@
                 <p:inputText value="#{productosC.nombre}" id="nombre"></p:inputText>
                 <p:outputLabel value="Descripción del producto" for="descripcion" ></p:outputLabel>
                 <p:inputText value="#{productosC.descripcion}" id="descripcion"></p:inputText>
-                <p:commandButton value="Guardar" actionListener="#{productosC.insertar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Actualizar" actionListener="#{productosC.actualizar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Eliminar" actionListener="#{productosC.eliminar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Consultar" actionListener="#{productosC.consultaPrimaria()}" update="msg1, form1"></p:commandButton>
+                <p:commandButton value="Guardar" actionListener="#{productosC.insertar()}" icon = "pi pi-plus" update="msg1"></p:commandButton>
+                <p:commandButton value="Actualizar" actionListener="#{productosC.actualizar()}" styleClass="ui-button-raised ui-button-secondary" icon = "pi pi-upload" update="msg1"></p:commandButton>
+                <p:commandButton value="Eliminar" actionListener="#{productosC.eliminar()}" styleClass="ui-button-raised ui-button-danger" icon = "pi pi-trash" update="msg1"></p:commandButton>
+                <p:commandButton value="Consultar" actionListener="#{productosC.consultaPrimaria()}" styleClass="ui-button-raised ui-button-warning"  icon = "pi pi-search" update="msg1, form1"></p:commandButton>
+                
             </p:panelGrid>
             </div>
              <div class="p-col-7">
