--- a/web/ventas.xhtml
+++ b/web/ventas.xhtml
@@ -25,10 +25,10 @@
                 <p:inputText value="#{ventasC.cb}" id="cb"></p:inputText>
                 <p:outputLabel value="Cantidad" for="cantidad" ></p:outputLabel>
                 <p:inputText value="#{ventasC.cantidad}" id="cantidad"></p:inputText>
-                <p:commandButton value="Guardar" actionListener="#{ventasC.insertar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Actualizar" actionListener="#{ventasC.actualizar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Eliminar" actionListener="#{ventasC.eliminar()}" update="msg1"></p:commandButton>
-                <p:commandButton value="Consultar" actionListener="#{ventasC.consultaPrimaria()}" update="msg1,form1"></p:commandButton>
+                <p:commandButton value="Guardar" actionListener="#{ventasC.insertar()}" icon = "pi pi-plus" update="msg1"></p:commandButton>
+                <p:commandButton value="Actualizar" actionListener="#{ventasC.actualizar()}" styleClass="ui-button-raised ui-button-secondary" icon = "pi pi-upload" update="msg1"></p:commandButton>
+                <p:commandButton value="Eliminar" actionListener="#{ventasC.eliminar()}" styleClass="ui-button-raised ui-button-danger" icon = "pi pi-trash" update="msg1"></p:commandButton>
+                <p:commandButton value="Consultar" actionListener="#{ventasC.consultaPrimaria()}" styleClass="ui-button-raised ui-button-warning"  icon = "pi pi-search" update="msg1,form1"></p:commandButton>
             </p:panelGrid>
             </div>
              <div class="p-col-7">
