--- a/web/ventas.xhtml
+++ b/web/ventas.xhtml
@@ -12,6 +12,13 @@
         <h:outputStylesheet name="css/primeflex.min.css" />
     </h:head>
     <h:body>
+        <div class="p-grid">
+            <div class="p-col"></div>
+            <div class="p-col"></div>
+            <div class="p-col"><p:graphicImage name="Softwash.png" style="max-width: 640px;" library="img"/></div>
+            <div class="p-col"></div>
+            <div class="p-col"></div>
+        </div>
         <ui:include src="barraMenu.xhtml"></ui:include>
         <h:form id="form1">
             <div class="p-grid">
