--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -14,7 +14,7 @@
         <div class="p-grid">
             <div class="p-col"></div>
             <div class="p-col"></div>
-            <div class="p-col"><p:graphicImage name="Softwash.png" style="max-width: 640px;" library="img"/></div>
+            <div class="p-col"><p:graphicImage name="Softwash.png" style="max-width: 640px;" library="img"></p:graphicImage></div>
             <div class="p-col"></div>
             <div class="p-col"></div>
         </div>
