--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -8,7 +8,15 @@
     <h:head>
         <title>SoftWash</title>
         <h:outputStylesheet name="css/primeflex.min.css" />
-
+        <style>
+            body {
+                height: 400px;
+                background-image: url("https://i.imgur.com/n8uEpN6.jpg");
+                background-size: cover;
+                background-repeat:no-repeat;
+                background-position: center center;
+            }
+        </style>
     </h:head>
     <h:body >
         <div class="p-grid">
