--- a/web/Usuario.xhtml
+++ b/web/Usuario.xhtml
@@ -42,6 +42,14 @@ and open the template in the editor.
             width: 33%;
             padding: 4px;
         }
+        
+        body {
+                height: 400px;
+                background-image: url("https://i.imgur.com/n8uEpN6.jpg");
+                background-size: cover;
+                background-repeat:no-repeat;
+                background-position: center center;
+            }
     </style>
 
     <h:body style="background-color: #f8f9fa;">
